multiidioma incluit, solament hi ha es catala

--- a/lib/l10n/app_ca.arb
+++ b/lib/l10n/app_ca.arb
@@ -1,11 +1,51 @@
 {
-  "title": "Carnisseria",
-  "selectScale": "Seleccionar Bàscula",
+  "butchershop": "Carnisseria",
+  "selectScale": "Seleccionar bàscula",
   "scaleSelected": "Seleccionada: {scaleName}",
-  "selectPrinter": "Seleccionar Impressora",
+  "selectPrinter": "Seleccionar impressora",
   "printerSelected": "Seleccionada: {printerName}",
-  "viewTotalsByArticle": "Veure Totals per Article",
+  "viewTotalsByArticle": "Veure totals per article",
   "close": "Tancar",
   "error": "Error",
-  "selectCategory": "Selecciona una categoria"
+  "selectCategory": "Selecciona una categoria",
+  "selectClient": "Seleccionar client",
+  "searchClient": "Cercar client",
+  "cancel": "Cancel·lar",
+  "noProductsAvailable": "No hi ha productes disponibles",
+  "summary": "RESUM",
+  "noOptionsAvailable": "No hi ha opcions disponibles",
+  "selectItems": "Selecciona:",
+  "aCategory": "Una categoria",
+  "aScale": "Una bàscula",
+  "aPrinter": "Una impressora",
+  "atLeastOneSummary": "Al menys un resum",
+  "accept": "Acceptar",
+  "errorFetchingWeight": "Error en obtenir el pes de l'article: {error}",
+  "markedAsPending": "El producte s'ha marcat com a pendent",
+  "removePending": "Treure pendent",
+  "block": "BLOC",
+  "quantity": "QUANT.",
+  "unit": "UNI",
+  "clientProduct": "CLIENT/ PRODUCTE",
+  "productsNotLoaded": "No s'han carregat els productes",
+  "reviewComplete": "REVISAR COMPLET",
+  "changeConfiguration": "CANVIAR CONFIGURACIÓ",
+  "alert": "Alerta",
+  "missingFunctionality": "Falta funcionalitat, avisa a informàtica",
+  "removeFilter": "QUITAR FILTRO",
+  "filterClient": "FILTRAR CLIENT",
+  "markPending": "MARCAR PENDENT",
+  "blockLabel": "ETIQUETA BLOC",
+  "productWeight": "PES PRODUCTE",
+  "lot": "LOT",
+  "sn": "S/N",
+  "multiWeight": "Multi Pes",
+  "acceptWeightRecordPrint": "Acceptar Pesada,\ngravar, imprimir",
+  "errorSendingWeight": "Error en enviar el pes: {error}",
+  "productAlreadyWeighed": "El producte seleccionat ja està pesat i etiquetat.\nSi voleu canviar el pes és necessari borrar la pesada.",
+  "clientName": "Nom del client",
+  "productName": "Nom del producte",
+  "productObservation": "Observació del producte",
+  "weight": "Pes",
+  "deleteWeight": "Borrar pesada"
 }
