warnings i prints llevats

--- a/lib/l10n/app_ca.arb
+++ b/lib/l10n/app_ca.arb
@@ -1,4 +1,5 @@
 {
+  "title": "Pesar Fresc",
   "butchershop": "Carnisseria",
   "selectScale": "Seleccionar bàscula",
   "scaleSelected": "Seleccionada: {scaleName}",
